# ksnn

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/activation_functions/: mod.rs
src/conversion_functions/: mod.rs
src/gpu_compute/: mod.rs  shader.wgsl
src/network_layers/: mod.rs
src/optimizers/: mod.rs
