[package]
name = "ksnn"
version = "0.3.0"
edition = "2021"
description = "ksnn, or Kosiorek's Simple Neural Networks, is a crate that simplifies the creation, training, and validation of a neural network. The crate is heavily inspired by \"Neural Networks from Scratch in Python\" by Harrison Kinsley & Daniel Kukieła."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dakota-kosiorek/ksnn"
exclude = [
    "src/main.rs",
    "testing/*",
    "training/*",
    "target/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "~0.15.4", features = ["serde"] }
ndarray-rand = "~0.14.0"
rand_distr = "~0.4.3"
rand = "~0.8.5"
indicatif = "~0.16.2"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
